# mediaSorter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mdsort/: converter.py  formatter.py  logger.py  main.py  media_file.py  parent_directory.py  sorter.py  torrent_client.py
mdsort/settings/: __init__.py
settings/: __init__.py  dev.py  prod.py
tests/: __init__.py  conftest.py  consts.py  test_converter.py  test_formatter.py  test_media_file.py  test_parent_directory.py  test_sorter.py  test_torrent_client.py
