[tool.poetry]
name = "mediasorter"
version = "0.1.0"
description = ""
authors = ["Monkey <Monkey@Tree.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.2"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
